Added the news search feature
Created fragment for news search, viewModel for this fragment,  and utils for working with date

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">NewsPortal</string>
+    <string name="buttonText">%1$s - %2$s</string>
+    <string name="searchHint">enter a phrase</string>
 
     <string-array name="categories">
         <item>business</item>
