--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">NewsPortal</string>
-    <string name="buttonText">%1$s - %2$s</string>
-    <string name="searchHint">enter a phrase</string>
+    <string name="date_range">%1$s - %2$s</string>
+    <string name="search_view_hint">enter a phrase</string>
 
     <string-array name="categories">
         <item>business</item>
