--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">NewsPortal</string>
     <string name="date_range">%1$s - %2$s</string>
     <string name="search_view_hint">enter a phrase</string>
+    <string name="search">Search</string>
+    <string name="hot_news">Hot News</string>
 
     <string-array name="categories">
         <item>business</item>
