--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="search">Search</string>
     <string name="hot_news">Hot News</string>
     <string name="go_to_browser">Go to browser</string>
-    <string name="author_template">Author: %1$s</string>
+    <string name="author_template">Author: %s</string>
 
     <string-array name="categories">
         <item>business</item>
