--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="add_to_bookmarks">Add to bookmarks</string>
     <string name="remove_to_bookmarks">Remove from bookmarks</string>
     <string name="view_in_browser">View in browser</string>
+    <string name="three_dots">⋮</string>
 
     <string-array name="categories">
         <item>business</item>
