--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,9 @@
     <string name="remove_to_bookmarks">Remove from bookmarks</string>
     <string name="view_in_browser">View in browser</string>
     <string name="three_dots">⋮</string>
+    <string name="choose_browser">Choose browser</string>
+    <string name="unknown_author">Author: unknown</string>
+    <string name="you_haven_t_added_any_bookmarks">You haven not added any bookmarks</string>
 
     <string-array name="categories">
         <item>business</item>
